CodeBaseServer2020/development/CBS653_SRVRECOVER/d4declar.h

   S4EXPORT int S4FUNCTION i4close( INDEX4 S4PTR * ) ;
   S4EXPORT INDEX4 S4PTR *S4FUNCTION i4create( DATA4 S4PTR *, const char S4PTR *, const TAG4INFO S4PTR * ) ; 
   S4EXPORT const char S4PTR *S4FUNCTION i4fileName( INDEX4 S4PTR * ) ;
   S4EXPORT INDEX4 S4PTR *S4FUNCTION i4open( DATA4 S4PTR *, const char S4PTR * ) ;
   S4EXPORT int S4FUNCTION i4reindex( INDEX4 S4PTR * ) ;
   S4EXPORT TAG4 S4PTR *S4FUNCTION i4tag( INDEX4 S4PTR *, const char S4PTR * ) ;
   S4EXPORT int S4FUNCTION i4tagAdd( INDEX4 S4PTR *, const TAG4INFO S4PTR * ) ;
   S4EXPORT TAG4INFO *S4FUNCTION i4tagInfo( INDEX4 * ) ;
   S4EXPORT char S4PTR *S4FUNCTION t4alias( TAG4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION t4close( TAG4 S4PTR * ) ;
   #define t4open( a, b, c ) t4openLow( (a), (b), (c), 0 )
   S4EXPORT TAG4 *S4FUNCTION t4openCB(DATA4 *, char * ) ;
   S4EXPORT short int S4FUNCTION t4unique( const TAG4 S4PTR * ) ;
   S4EXPORT const char S4PTR *S4FUNCTION t4filterCB( TAG4 * ) ;
      S4EXPORT int S4FUNCTION t4uniqueSet( TAG4 S4PTR *, const short ) ;
      S4EXPORT const char S4PTR *S4FUNCTION t4exprCB( TAG4 * ) ;
   S4EXPORT unsigned short int S4FUNCTION tfile4isDescending( TAG4FILE * ) ;  
   S4EXPORT short S4FUNCTION t4descending( TAG4 * ) ;
S4EXPORT void S4PTR *S4FUNCTION u4allocDefault( long ) ;
S4EXPORT void S4PTR *S4FUNCTION u4allocFreeDefault( CODE4 S4PTR *, long ) ;
S4EXPORT int S4FUNCTION u4freeDefault( void S4PTR * ) ;
S4EXPORT unsigned long S4FUNCTION u4ncpy( char S4PTR *, const char S4PTR *, const unsigned int ) ;
S4EXPORT long S4FUNCTION u4switch( void ) ;  
   #define u4alloc( a ) u4printAlloc( (a), __FILE__, __LINE__ )
   #define u4allocFree( a, b ) u4printAllocFree( (a), (b), __FILE__, __LINE__ )
   #define u4free( a ) u4printFree( (a), __FILE__, __LINE__ )
   #define u4alloc( a ) ( u4allocDefault( a ) )
   #define u4allocFree( a, b ) ( u4allocFreeDefault( a, b ) )
   #define u4free( a ) ( u4freeDefault( a ), a = 0 )