CodeBaseServer2020/development/CBS653_SRVRECOVER/R4REPORT.H


typedef struct STYLE4EQUIVFONTst
{
   LINK4 link;
   char winfont[33];
   char equivfont[33];
} STYLE4EQUIVFONT, S4PTR *PSTYLE4EQUIVFONT;
typedef struct STYLE4St
{
   LINK4 link;
   char name[20];    
   R4LOGFONT lfont;   
   R4HFONT   screen_font, printer_font; 
   R4COLORREF color; 
   long menu_id;
   short position;
   short point_size;
   short codes_before_len, codes_after_len;
   char *codes_before, *codes_after;
   #ifdef S4WINDOWS
   #ifdef S4WIN32
   LOGFONT ntFont;
   #endif
   #endif
} STYLE4, S4PTR *PSTYLE4;
typedef struct GROUP4St
{
   LINK4 link;
   short position;  
   short is_active; 
   short header_footer;
   short title_summary;
   short tsdone;
   S4CONV( EXPR4 *resetExpression, EXPR4 *reset_expression ) ;
   S4CONV( char  *lastResetValue, char  *last_reset_value ) ;
   char *held_reset_value;
   char group_label[26];
   LIST4 header_areas;
   LIST4 footer_areas;
   short swap_header;
   short swap_footer;
   short repeat_header;
   short reset_page;
   short reset_pagenum;
   short reset_flag;
   short lookahead;
   short tswap_header;
   short tswap_footer;
   short trepeat_header;
   short treset_page;
   short treset_pagenum;
   struct REPORT4St *report;
   #ifdef S4WINDOWS
      HWND header_info_hWnd;
      HWND footer_info_hWnd;
   #endif
} GROUP4, S4PTR *PGROUP4;
typedef struct AREA4St
{
   LINK4 link;
   short position;   
   long height;      
   int  height_dev;  
   short is_header;  
   short is_active;  
   EXPR4 *suppression_condition;
   GROUP4 *group;    
   short allow_pagebreaks;  
   LIST4 objects;    
   struct REPORT4St *report;  
   #ifdef S4WINDOWS
      HWND hWnd;
   #endif
} AREA4, S4PTR *PAREA4;
typedef struct OBJECT4St
{
   short objtype;    
   short alignment;  
   long x, y, w, h;  
   long info_len;    
   void *info;       
   short style_index; 
} OBJECT4, S4PTR *POBJECT4;
typedef struct PAGE4St
{
   FILE4  file_buf;
   FILE4SEQ_READ seq_rd;
   FILE4SEQ_WRITE seq_wr;
   char fmem_buf[8192];
   char rmem_buf[8192];
   char *mem_buf, *mem_buf_pos;
   short first_read;
   long info_buf_len;
   OBJECT4 object;
} PAGE4, S4PTR *PPAGE4;
typedef struct REPORT4St
{
   S4CONV( CODE4 *codeBase, CODE4 *code_base ) ;  
   RELATE4 *relate;   
   char *report_name;         
   char *report_file_name;    
   char *printer_name;
   #ifdef S4WINDOWS
      HDC printerDC;
   #endif
   char *stylesheet_name;
   char *report_caption;
   char default_date_format[20];
   GROUP4 *title_summary; 
   GROUP4 *page_header_footer; 
   LIST4 styles;               
   LIST4 groups;               
   LIST4 active_objects;       
   LIST4 obj_type_info;        
   LIST4 *obj_type_list;
   STYLE4 *active_style;
   long  sensitivity_x, sensitivity_y;
   int   dsx, dsy;
   short adjust_all;
   short units;
   short hide_info;
   short screen_breaks;
   short pgbrk_title;
   short pathnames;
   short bitmaps;
   int output_handle, use_styles;
   long report_width, report_height;
   long margin_top, margin_bottom, margin_right, margin_left;
   long hard_margin_top, hard_margin_bottom, hard_margin_right, hard_margin_left;
   long page_no, start_page, end_page, page_count;
   short page_nums;
   char decimal_point, thousand_separator, currency_symbol[11];
   short hard_resets_flag;
   short first;
   int output_code, output_flag;
   long dev_page_height, dev_page_width;
   long dev_margin_left, dev_margin_top, dev_margin_right, dev_margin_bottom;
   long dev_hard_margin_top, dev_hard_margin_bottom, dev_hard_margin_right, dev_hard_margin_left;
   long disp_bottom;
   long ypos, break_height;
   short in_header, end_report, broken, tdone;
   GROUP4 *group_on, *group_first;
   AREA4  *area_on;
   short   for_dbf;
   LIST4   output_objs;
   PGROUP4 output_group;
   FILE4SEQ_WRITE dfile_seq;
   char *dfile_name, *dfile_buf;
   DATA4 *data_file;
   long rcount;
   PAGE4 page_buf;
   #ifdef S4WINDOWS
      HWND hWnd;
      HWND hWnd2;
      HWND pagewin;
   #endif
} REPORT4, S4PTR *PREPORT4;
typedef struct _OBJECTStruct
{
   LINK4 link;
   LINK4 link2;
   long x, y;
   long w, h;
   int num_chars;
   short is_active, is_first;
   short display_once;
   EXPR4 *display_once_expr;
   char  *last_display_val;
   AREA4 *area; 
   char *wintext;
   char *date_format;
   int date_changed;
   char *eval_text;
   int eval_len;
   STYLE4 *style;
   short style_location;
   short lookahead;
   OBJ4TYPE *obj_type;
   struct _OBJECTStruct *container;  
   LIST4 contained;           
   short obj_type_num;
   short alignment; 
   short numeric_type, display_zero, dec, use_brackets, leading_zero;
   short mod_type, background;
   void *data; 
   long dev_x, dev_y, dev_w, dev_h;
   double dval;
   FIELD4 *field;
   char field_name[11];
   char field_type;
   int  field_len;
   int  field_dec;
   #ifdef S4WINDOWS
      HWND hWnd;
   #endif
} OBJ4, S4PTR *POBJ4;
typedef struct OUTOBJLIST_st
{
   LINK4 link;
   POBJ4 obj;
} OUT4OBJ, S4PTR *POUT4OBJ;
typedef struct N4CHANGE_st
{
   LINK4 link;
   char  *old_name;
   char  *new_name;
} N4CHANGE, S4PTR *PN4CHANGE;
   typedef struct _inst4report
   {
      REPORT4 *report;
      LIST4   groups;
      LIST4   fields;
      LIST4   totals;
      char    *title, *sort_expr, *query_expr;
      int     hspace, vspace, max_obj_width;
      BOOL    vert_wrap, labels, labels_ingroup;
   } INST4REPORT, S4PTR *PINST4REPORT;
   typedef struct _inst4group
   {
      LINK4  link;
      char   *group_expr;
   }INST4GROUP, S4PTR *PINST4GROUP;
   typedef struct _inst4field
   {
      LINK4 link;
      FIELD4 *field;
   }INST4FIELD, S4PTR *PINST4FIELD;
   typedef struct _inst4total
   {
      LINK4 link;
      char *total_expr;
      PINST4GROUP igroup;
      PINST4FIELD ifield;
   }INST4TOTAL, S4PTR *PINST4TOTAL;
S4EXPORT void S4FUNCTION       report4freeLow( PREPORT4, short, short, short ) ;
S4EXPORT int S4FUNCTION report4dateFormat( PREPORT4, char S4PTR * );
S4EXPORT int S4FUNCTION report4querySet( PREPORT4, char S4PTR * );
S4EXPORT int S4FUNCTION report4sortSet( PREPORT4, char S4PTR * );
S4EXPORT int S4FUNCTION report4do( PREPORT4 );
S4EXPORT short S4FUNCTION report4doCB( REPORT4 * ) ;
int S4FUNCTION report4save( PREPORT4, char S4PTR *, int );
int S4FUNCTION relate4save( RELATE4 S4PTR *, char S4PTR *, int );
PREPORT4 S4FUNCTION  report4retrieve( CODE4 S4PTR *, char S4PTR *, int, char S4PTR * );
RELATE4 S4PTR * S4FUNCTION  relate4retrieve( CODE4 S4PTR *, char S4PTR *, int, char S4PTR * );
S4EXPORT int S4FUNCTION report4save( PREPORT4, char S4PTR *, int );
S4EXPORT int S4FUNCTION relate4save( RELATE4 S4PTR *, char S4PTR *, int );
S4EXPORT PREPORT4 S4FUNCTION  report4retrieve( CODE4 S4PTR *, char S4PTR *, int, char S4PTR * );
S4EXPORT RELATE4 S4PTR * S4FUNCTION  relate4retrieve( CODE4 S4PTR *, char S4PTR *, int, char S4PTR * );
S4EXPORT RELATE4 S4PTR* S4FUNCTION relate4masterCB( RELATE4 * ) ;
S4EXPORT const char S4PTR* S4FUNCTION relate4masterExprCB( RELATE4 * ) ;
S4EXPORT DATA4 S4PTR* S4FUNCTION relate4dataCB( RELATE4 * ) ;
S4EXPORT TAG4 S4PTR* S4FUNCTION relate4dataTagCB( RELATE4 * ) ;
S4EXPORT RELATE4 S4PTR * S4FUNCTION report4relate( REPORT4 * ) ;
S4EXPORT int S4FUNCTION report4caption( PREPORT4, char S4PTR * );
S4EXPORT short S4FUNCTION report4printerSelect( PREPORT4 report );
S4EXPORT int S4FUNCTION report4parent( PREPORT4, HWND );
S4EXPORT int S4FUNCTION report4margins( PREPORT4 report, long left, long right, long top, long bottom, int unit_type );
S4EXPORT int S4FUNCTION report4pageSize( PREPORT4 report, long pg_height, long pg_width, int unit_type );
S4EXPORT int S4FUNCTION report4currency( PREPORT4, char * );
S4EXPORT int S4FUNCTION report4decimal( PREPORT4, char );
S4EXPORT int S4FUNCTION report4separator( PREPORT4, char );
S4EXPORT int S4FUNCTION report4toScreen( PREPORT4 report, short to_screen );
S4EXPORT int S4FUNCTION report4decimal_v( PREPORT4 report, char *decimal ) ;
S4EXPORT int S4FUNCTION report4separator_v( PREPORT4, char * ) ;