CodeBaseServer2020/development/CBS653_SRVRECOVER/R4RELATE.H


#define relate4filterRecord 101
#define relate4doRemove 102
#define relate4skipped 104
#define relate4blank 105
#define relate4skipRec 106
#define relate4terminate 107
#define relate4exact 108
#define relate4scan 109
#define relate4approx 110
#define relate4sortSkip 120
#define relate4sortDone 121
typedef struct RELATE4St
{
   LINK4 link ;
   S4CONV( short relationType, short relation_type ) ;  
   S4CONV( int sortType, int sort_type ) ;
   S4CONV( short errorAction, short error_action ) ;   
   S4CONV( short matchLen, short match_len ) ;      
   unsigned short int id ;
   char S4PTR *scanValue ;      
   struct RELATE4St S4PTR *master ;
   struct RELATION4St S4PTR *relation ;
   S4CONV( CODE4 S4PTR *codeBase, CODE4 S4PTR *code_base ) ;
   S4CONV( EXPR4 S4PTR *masterExpr, EXPR4 S4PTR *master_expr ) ; 
   S4CONV( TAG4 S4PTR *dataTag, TAG4 S4PTR *data_tag ) ;        
   DATA4 S4PTR *data ;   
   LIST4 slaves ;
   LIST4 relateList ;  
   #ifndef S4CLIENT
      int scanValueLen ;
      int scanValueAllocLen ;
      int isRead ;
      F4FLAG  set ;  
      #ifndef S4STAND_ALONE
         DATA4 S4PTR *dataOld ; 
         int freeData ;         
      #endif
   #endif
   #ifdef S4SERVER
      long dataId ;    
   #else
      S4CONV( char S4PTR *oldRecord, char S4PTR *old_record ) ;
   #endif
   #ifdef S4WINDOWS
      HWND hWnd;
      S4CONV( int totalChildren, int total_children ) ;
   #endif
} RELATE4 ;
S4EXPORT int S4FUNCTION relate4bottom( RELATE4 S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4changed( RELATE4 S4PTR * ) ;  
S4EXPORT RELATE4 S4PTR * S4FUNCTION relate4createSlave( RELATE4 S4PTR *, DATA4 S4PTR *, const char S4PTR *, TAG4 S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4doAll( RELATE4 S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4doOne( RELATE4 S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4eof( RELATE4 S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4errorAction( RELATE4 S4PTR *, const int ) ;  
S4EXPORT int S4FUNCTION relate4free( RELATE4 S4PTR *, const int ) ;
S4EXPORT RELATE4 S4PTR * S4FUNCTION relate4init( DATA4 S4PTR *, char S4PTR * ) ;
S4EXPORT RELATE4 S4PTR * S4FUNCTION relate4init( DATA4 S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4matchLen( RELATE4 S4PTR *, const int ) ;
S4EXPORT int S4FUNCTION relate4next( RELATE4 S4PTR * S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4querySet( RELATE4 S4PTR *, const char S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4skip( RELATE4 S4PTR *, const long ) ;        
S4EXPORT int S4FUNCTION relate4skipEnable( RELATE4 S4PTR *, const int ) ;
S4EXPORT int S4FUNCTION relate4sortSet( RELATE4 S4PTR *, const char S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4top( RELATE4 S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4type( RELATE4 S4PTR *, int ) ;          
   #define relate4data( r4 ) ( (r4)->data )
   #define relate4dataTag( r4 ) ( (r4)->dataTag )
   #define relate4master( r4 ) ( (r4)->master )
      S4EXPORT int S4FUNCTION relate4lockAdd( RELATE4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION relate4lockAdd( RELATE4 S4PTR * ) ;
S4EXPORT int S4FUNCTION relate4optimizeable( RELATE4 S4PTR * ) ;