CodeBaseServer2020/development/SpeedDemo/CODEBASE.BAS


'===============================================================================================
'
'                             Index Functions' Prototypes
'
'-----------------------------------------------------------------------------------------------
Declare Function i4close% Lib "cb6demo.dll" (ByVal i4&)
Declare Function i4createCB& Lib "cb6demo.dll" Alias "i4create" (ByVal d4&, ByVal fileName As Any, tagInfo As TAG4INFOCB)
Declare Function i4fileNameCB& Lib "cb6demo.dll" Alias "i4fileName" (ByVal i4&)
Declare Function i4openCB& Lib "cb6demo.dll" Alias "i4open" (ByVal d4&, ByVal fileName As Any)
Declare Function i4reindex% Lib "cb6demo.dll" (ByVal i4&)
Declare Function i4tag& Lib "cb6demo.dll" (ByVal i4&, ByVal fileName$)
Declare Function i4tagInfo& Lib "cb6demo.dll" (ByVal i4&)
Declare Function i4tagAddCB% Lib "cb6demo.dll" Alias "i4tagAdd" (ByVal i4&, tagInfo As TAG4INFOCB)

'===============================================================================================
'
'                            Relate Functions' Prototypes
'
'-----------------------------------------------------------------------------------------------

Declare Function relate4bottom% Lib "cb6demo.dll" (ByVal r4&)
Declare Sub relate4changed Lib "cb6demo.dll" (ByVal r4&)
Declare Function relate4createSlave& Lib "cb6demo.dll" (ByVal r4&, ByVal d4&, ByVal mExpr$, ByVal t4 As Any)
Declare Function relate4data& Lib "cb6demo.dll" Alias "relate4dataCB" (ByVal r4&)
Declare Function relate4dataTag& Lib "cb6demo.dll" Alias "relate4dataTagCB" (ByVal r4&)
Declare Function relate4doAll% Lib "cb6demo.dll" (ByVal r4&)
Declare Function relate4doOne% Lib "cb6demo.dll" (ByVal r4&)
Declare Function relate4eof% Lib "cb6demo.dll" (ByVal r4&)
Declare Function relate4errorAction% Lib "cb6demo.dll" Alias "relate4errorActionVB" (ByVal r4&, ByVal ErrAction%)
Declare Function relate4free% Lib "cb6demo.dll" Alias "relate4freeVB" (ByVal r4&, ByVal CloseFlag%)
Declare Function relate4init& Lib "cb6demo.dll" (ByVal d4&)
Declare Function relate4lockAdd% Lib "cb6demo.dll" (ByVal r4&)
Declare Function relate4master& Lib "cb6demo.dll" Alias "relate4masterCB" (ByVal r4&)
Declare Function relate4masterExprCB& Lib "cb6demo.dll" (ByVal r4&)
Declare Function relate4matchLen% Lib "cb6demo.dll" Alias "relate4matchLenVB" (ByVal r4&, ByVal length%)
Declare Function relate4next% Lib "cb6demo.dll" (r4&)
Declare Function relate4optimizeable% Lib "cb6demo.dll" (ByVal r4&)
Declare Function relate4querySet% Lib "cb6demo.dll" (ByVal r4&, ByVal expr As String)
Declare Function relate4retrieve& Lib "cb6demo.dll" (ByVal c4&, ByVal fileName$, ByVal openFiles%, ByVal dataPathName$)
Declare Function relate4save% Lib "cb6demo.dll" (ByVal rel4&, ByVal fileName$, ByVal savePathNames%)
Declare Function relate4skip% Lib "cb6demo.dll" (ByVal r4&, ByVal NumRecs&)
Declare Function relate4skipEnable% Lib "cb6demo.dll" Alias "relate4skipEnableVB" (ByVal r4&, ByVal DoEnable%)
Declare Function relate4sortSet% Lib "cb6demo.dll" (ByVal r4&, ByVal expr As String)
Declare Function relate4top% Lib "cb6demo.dll" (ByVal r4&)
Declare Function relate4topMaster& Lib "cb6demo.dll" (ByVal r4&)
Declare Function relate4type% Lib "cb6demo.dll" Alias "relate4typeVB" (ByVal r4&, ByVal rType%)

'===============================================================================================
'
'  Report function prototypes
'
'================================================================================================
Declare Function report4caption% Lib "cb6demo.dll" (ByVal r4&, ByVal caption$)
Declare Function report4currency% Lib "cb6demo.dll" (ByVal r4&, ByVal currncy$)
Declare Function report4dateFormat% Lib "cb6demo.dll" (ByVal r4&, ByVal dateFmt$)
Declare Function report4decimal% Lib "cb6demo.dll" Alias "report4decimal_v" (ByVal r4&, ByVal decChar$)
Declare Function report4do% Lib "cb6demo.dll" Alias "report4doCB" (ByVal r4&)
Declare Sub report4freeLow Lib "cb6demo.dll" (ByVal r4&, ByVal freeRelate%, ByVal closeFiles%, ByVal doPrinterFree%)
Declare Function report4margins% Lib "cb6demo.dll" (ByVal r4&, ByVal mLeft&, ByVal mRight&, ByVal mTop&, ByVal mBottom&, ByVal uType%)
Declare Function report4pageSize% Lib "cb6demo.dll" (ByVal r4&, ByVal pHeight&, ByVal pWidth&, ByVal uType%)
Declare Function report4parent% Lib "cb6demo.dll" (ByVal r4&, ByVal hWnd&)
Declare Sub report4printerSelect Lib "cb6demo.dll" (ByVal r4&)
Declare Function report4querySet% Lib "cb6demo.dll" (ByVal r4&, ByVal queryExpr$)
Declare Function report4relate& Lib "cb6demo.dll" (ByVal r4&)
Declare Function report4retrieve& Lib "cb6demo.dll" (ByVal c4&, ByVal fileName$, ByVal openFiles%, ByVal dataPath$)
Declare Function report4save% Lib "cb6demo.dll" (ByVal r4&, ByVal fileName$, ByVal savePaths%)
Declare Function report4screenBreaks% Lib "cb6demo.dll" (ByVal r4&, ByVal value%)
Declare Function report4separator% Lib "cb6demo.dll" Alias "report4separator_v" (ByVal r4&, ByVal separator$)
Declare Function report4sortSet% Lib "cb6demo.dll" (ByVal r4&, ByVal sortExpr$)
Declare Function report4toScreen% Lib "cb6demo.dll" (ByVal r4&, ByVal toScreen%)


'===============================================================================================
'
'                            Tag Functions' Prototypes
'
'-----------------------------------------------------------------------------------------------

Declare Function t4aliasCB& Lib "cb6demo.dll" Alias "t4alias" (ByVal t4&)
Declare Function t4close% Lib "cb6demo.dll" (ByVal t4&)
Declare Function t4descending% Lib "cb6demo.dll" Alias "tfile4isDescending" (ByVal t4&)
Declare Function t4exprCB& Lib "cb6demo.dll" (ByVal t4&)
Declare Function t4filterCB& Lib "cb6demo.dll" (ByVal t4&)
Declare Function t4open& Lib "cb6demo.dll" Alias "t4openCB" (ByVal dbPtr&, ByVal IndexName$)
Declare Function t4unique% Lib "cb6demo.dll" (ByVal t4&)
Declare Function t4uniqueSet% Lib "cb6demo.dll" Alias "t4uniqueSetVB" (ByVal t4&, ByVal value%)


'=======================================================================================
'
'                Utility function prototypes
'
'-----------------------------------------------------------------------------------------------

Declare Function u4alloc& Lib "cb6demo.dll" Alias "u4allocDefault" (ByVal amt&)
Declare Function u4allocFree& Lib "cb6demo.dll" Alias "u4allocFreeDefault" (ByVal c4&, ByVal amt&)
Declare Sub u4free Lib "cb6demo.dll" Alias "u4freeDefault" (ByVal memPtr&)

'16-Bit versions
Declare Function u4ncpy% Lib "cb6demo.dll" (ByVal MemPtr1$, ByVal memptr2&, ByVal memLength%)
Declare Function u4ncpy2% Lib "cb6demo.dll" Alias "u4ncpy" (ByVal MemPtr1&, ByVal memptr2$, ByVal memLength%)

'32-Bit versions
'Declare Function u4ncpy& Lib "cb6demo.dll" (ByVal MemPtr1$, ByVal memptr2&, ByVal memLength&)
'Declare Function u4ncpy2& Lib "cb6demo.dll" Alias "u4ncpy" (ByVal MemPtr1&, ByVal memptr2$, ByVal memLength&)

Declare Sub u4memCpy Lib "cb6demo.dll" (ByVal dest$, ByVal source&, ByVal numCopy&)
Declare Function u4switch& Lib "cb6demo.dll" ()

'=======================================================================================
'
'                Misc. function prototypes
'
'========================================================================================

Declare Function v4Cstring& Lib "cb6demo.dll" (ByVal s$)
Declare Sub v4Cstringfree Lib "cb6demo.dll" (ByVal s&)

'CodeBase Return Code Constants

Global Const r4success% = 0
Global Const r4same = 0
Global Const r4found% = 1
Global Const r4down = 1
Global Const r4after = 2
Global Const r4complete = 2
Global Const r4eof = 3
Global Const r4bof = 4
Global Const r4entry = 5
Global Const r4descending = 10
Global Const r4unique = 20
Global Const r4uniqueContinue = 25
Global Const r4locked = 50
Global Const r4noCreate = 60
Global Const r4noOpen = 70
Global Const r4notag = 80
Global Const r4terminate = 90
Global Const r4inactive = 110
Global Const r4active = 120
Global Const r4authorize = 140
Global Const r4connected = 150
Global Const r4logOpen = 170
Global Const r4logOff = 180
Global Const r4null = 190

Global Const relate4filterRecord = 101
Global Const relate4doRemove = 102
Global Const relate4skipped = 104
Global Const relate4blank = 105
Global Const relate4skipRec = 106
Global Const relate4terminate = 107
Global Const relate4exact = 108
Global Const relate4scan = 109
Global Const relate4approx = 110
Global Const relate4sortSkip = 120
Global Const relate4sortDone = 121

'CodeBasic Field Definition Constants
Global Const r4logLen = 1
Global Const r4dateLen = 8
Global Const r4memoLen = 10
Global Const r4bin = "B"        ' Binary
Global Const r4str$ = "C"       ' Character
Global Const r4charBin$ = "Z"   ' Character (binary)
Global Const r4currency$ = "Y"  ' Currency
Global Const r4date$ = "D"      ' Date
Global Const r4dateTime$ = "T"  ' DateTime
Global Const r4double$ = "B"    ' Double
Global Const r4float$ = "F"     ' Float
Global Const r4gen$ = "G"       ' General
Global Const r4int$ = "I"       ' Integer
Global Const r4log$ = "L"       ' Logical
Global Const r4memo$ = "M"      ' Memo
Global Const r4memoBin$ = "X"   ' Memo (binary)
Global Const r4num$ = "N"       ' Numeric
Global Const r4dateDoub$ = "d"  ' Date as Double
Global Const r4numDoub$ = "n"   ' Numeric as Double
Global Const r4unicode$ = "n"   ' Unicode character

Global Const r4system$ = "0"    ' used by FoxPro for null field value field
Global Const r5wstrLen$ = "O"
Global Const r5ui4$ = "P"
Global Const r5i2$ = "Q"
Global Const r5ui2$ = "R"
Global Const r5guid$ = "V"
Global Const r5wstr$ = "W"
Global Const r5i8$ = "1"        ' 8-byte long signed value (LONGLONG)
Global Const r5dbDate$ = "2"    ' struct DBDATE (6 bytes)
Global Const r5dbTime$ = "3"    ' struct DBTIME (6 bytes)
Global Const r5dbTimeStamp$ = "4" ' struct DBTIMESTAMP (16 bytes)
Global Const r5date$ = "5"

'Other CodeBase Constants
Global Const cp0 = 0          'code4.codePage constant
Global Const cp437 = 1
Global Const cp1252 = 3
Global Const collate4none = 0
Global Const collate4machine = 1
Global Const collate4generalCp1252 = 2
Global Const collate4generalCp437 = 3
Global Const collate4test = 4   ' test collation.  Users may use this one for customized ones...
Global Const LOCK4OFF = 0
Global Const LOCK4ALL = 1
Global Const LOCK4DATA = 2
Global Const LOG4TRANS = 0
Global Const LOG4ON = 1
Global Const LOG4ALWAYS = 2
Global Const OPEN4DENY_NONE = 0
Global Const OPEN4DENY_RW = 1
Global Const OPEN4DENY_WRITE = 2
Global Const OPT4EXCLUSIVE = -1
Global Const OPT4OFF = 0
Global Const OPT4ALL = 1
Global Const r4check = -5
Global Const r4maxVBStringLen = 65500
Global Const r4maxVBStrFunction = 32767
Global Const sort4machine = 0 'code4.collatingSequence constant
Global Const sort4general = 1
Global Const WAIT4EVER = -1

